# TKO-Analytics

./: .env.example  .gitignore  README.md  config.yaml  inspect_schema.py  migrate_add_student_name.py  migrate_database.py  migrate_metrics_student_hash.py  migrate_session_student_hash.py  process_etl_manual.py  pyproject.toml  requirements.txt  run.bat  run.sh  serve.py  setup.bat  setup.sh  test_all_phases.py  test_p1_simple.py  test_process_discovery.py  test_visualizations.py
scripts/: import_tko_data.py
src/: __init__.py
src/analytics/: __init__.py
src/dashboard/: app.py  routes.py
src/dashboard/static/: style.css  wizard.css
src/dashboard/templates/: base.html  cohort.html  import.html  index.html  process_mining.html  setup_wizard.html  student.html  task.html
src/etl/: __init__.py  data_cleanup.py  engine.py  init_db.py  loader.py  session_detector.py  validators.py
src/exporters/: xes_exporter.py
src/metrics/: __init__.py  engine.py
src/models/: __init__.py  events.py
src/parsers/: log_parser.py
src/process_mining/: __init__.py  conformance_checker.py  conformance_replayer.py  model_generator.py  pattern_detector.py  process_discovery.py  tko_to_xes.py  visualizations.py
src/tko_integration/: __init__.py  parser.py  scanner.py  transformer.py  validator.py
src/visualizations/: __init__.py  heatmaps.py  process_map.py  self_assessment.py  timeline.py
tests/: __init__.py
tests/demo_files/: create_demo_db.py  demo_pipeline.py  demo_process_mining.py
tests/integration/: __init__.py  conftest.py  test_end_to_end.py  test_parser.py  test_scanner.py  test_transformer.py
tests/unit/: test_loader.py  test_log_parser.py  test_metrics.py  test_models.py  test_session_detector.py  test_validators.py  test_xes_exporter.py
tko_analytics/: __init__.py
tko_analytics/dashboard/: __init__.py  app.py  routes.py
tko_analytics/dashboard/static/: style.css
tko_analytics/dashboard/templates/: index.html
tko_analytics/etl/: init_db.py  loader.py  validators.py
tko_analytics/exporters/: __init__.py
tko_analytics/metrics/: engine.py
tko_analytics/models/: __init__.py
tko_analytics/parsers/: __init__.py  log_parser.py
tko_analytics/process_mining/: __init__.py  analyzer.py
